--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -169,7 +169,7 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
+    background: #eedfbb;
     padding: 20px 30px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0,0,0,0.3);
