--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,7 +39,7 @@ h2 {
     font-size: 90px;
     font-weight: lighter;
     margin-bottom: 25px;
-    color: #b49760;
+    color: #866d3f;
     letter-spacing: 1px;
 }
 
